@@ -1,3 +1,10 @@
+2008-04-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-22-07
+	* webserver/converter: additional dirs which were missing
+	* gui: fix importing of sequences
+	* gui: warn before removing referenced sequences
+
 2008-04-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-22-06
